# mercury

./: Cargo.toml  README.md
src/: main.rs
src/event_store/: mod.rs
src/plugins/: mod.rs
src/plugins/http/: inbound.rs  mod.rs  outbound.rs  structs.rs
