[package]
name = "mercury"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.15"
uuid = { version = "1.18.1", features = ["v4"] }
